  -- a routine util/cj_detonation was added to compute the
     Chapman-Jouguet detonation velocity for any of the networks

# 18.04

  -- pynucastro (https://github.com/pynucastro/pynucastro) can now
     generate reaction networks compatible with StarKiller.  See the
     subch network.

# 17.11

  -- a new option to boost the reaction rates has been added
     to the integrators (PR #64)

  -- we now disable some composition derivatives in the EOS
     by default, for performance and memory reasons.  They can
     be reenabled by defining the preprocessor variable 
     EXTRA_THERMO (PR #59)

# 17.10

 -- the compositional derivatives are no longer available
    by default from the EOS.  To get these, set the preprocessor
    variable EXTRA_THERMO.  This change was done for performance
    reasons.

 -- the aprox19 and aprox21 networks no longer use a numerical
    Jacobian by default, as this was found to result in some
    bad numerical issues in VODE (PR #49)

 -- the maximum temperature for reactions, MAX_TEMP, is now
    an adjustable input parameter rather than being hardcoded
    at 1.d11.

 -- the Helmholtz EOS table is now read by the IO processor and
    broadcast to other processors (PR #53)

 -- the VODE integrator now does some additional checks on the
    state to ensure consistency (PR #47)

* 17.09

 -- a new rety mechanism was implemented that allows a different
    integrator to be used if the primary integrator fails

 -- the electron Ni56 electron capture rates and energy losses
    were updated from Mazurek (1973) to LMP (2000).  Thanks to
    Carl Fields for this contribution.  Pull request #40


* 17.08

 -- fix to aprox21 from Aron Michel (HITS) that fills in missing
    reactions

 -- updated the helmholtz EOS to use the latest table from Frank
    Timmes (in particular, this is now denser, with 2x points in T and
    rho dimensions).  If you copied the old table, you need to make sure
    you are using the new table now.
