@@ -3,3 +3,6 @@ small_x                              real               1.d-30
 
 # Should we use rate tables if they are present in the network?
 use_tables  logical   .false.
+
+# Should we use Deboer + 2017 rate for c12(a,g)o16?
+use_c12ag_deboer17  logical   .false.
